# QThemeEngine

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
.cursor/rules/: cpp-include-guards.mdc  cpp-naming.mdc
app/: main.cpp
cmake/: QThemeEngineConfig.cmake.in
docs/en/: README.md  architecture.md  qt-widgets-inventory.md
docs/zh/: architecture.md  coverage-matrix.md  fluent-mux-audit.md  qt-widgets-inventory.md  style.md  theme-engine-spec.md
examples/native_controls/: gallery.cpp  gallery.hpp  gallery_internal.cpp  gallery_internal.hpp  gallery_pages_basic.cpp  gallery_pages_misc.cpp  gallery_pages_shell.cpp  gallery_pages_views.cpp  gallery_session.cpp  main.cpp
include/qtheme/: accent.hpp  api.hpp  color_util.hpp  engine.hpp  pack.hpp  settings.hpp  store.hpp  style.hpp  types.hpp
include/theme/: color_util.hpp  iskinmanager.hpp  ithemeloader.hpp  skinmanager.hpp  themeapi.hpp  themeloader.hpp
resources/: app.theme.xml  theme.qrc
resources/themes/fluent/: fluent.dark.theme.json  fluent.hc.theme.json  fluent.light.theme.json  fluent.shared.metrics.json  user.sample.theme.json
scripts/: README.md  audit_fluent_vs_mux.py  audit_fluent_vs_mux_full.py  format_source.py
src/: color_util.cpp  skinmanager.cpp  themeapi.cpp  themeloader.cpp
src/qtheme/: accent.cpp  api.cpp  color_util.cpp  engine.cpp  pack.cpp  settings.cpp  store.cpp  style.cpp
tests/: test_smoke.cpp
widgets/: demobutton.cpp  demobutton.hpp
